# SAT

./: CMakeLists.txt  Main.cpp
cmake/: gtest_config.cmake
src/: Solver.cpp  Solver.h  SolverTest.cpp
